--- a/src/Components/pages/styles/products.css
+++ b/src/Components/pages/styles/products.css
@@ -1,87 +1,122 @@
-.products-head{
-    position:static;
-    margin-top: 100px;
-    background-color: rgba(239, 220, 230, 0.279);
-    padding:0.5px 0px;
-    border-bottom: 2px solid rgb(188, 188, 188);
-    border-top: 2px solid rgb(188, 188, 188);
-    
+.products-head {
+  position: static;
+  margin-top: 100px;
+  background-color: rgba(239, 220, 230, 0.279);
+  padding: 0.5px 0px;
+  border-bottom: 2px solid rgb(188, 188, 188);
+  border-top: 2px solid rgb(188, 188, 188);
 }
-.one-cat{
- width:100%;
- height:300px;
-border:1px solid black;
- margin-top:20px;
 
+.one-cat {
+  width: 100%;
+  height: 300px;
+  border: 1px solid black;
+  margin-top: 20px;
 }
-.one-cat-head{
-    width:100%;
-    height: 50px;
-    box-shadow: 0px 0px 4px 1px rgb(208, 208, 208);
-}
-.one-cat-head label{
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 20px;
-    margin-left:50px;
 
+.one-cat-head {
+  width: 100%;
+  height: 50px;
+  box-shadow: 0px 0px 4px 1px rgb(208, 208, 208);
+}
 
+.one-cat-head label {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 20px;
+  margin-left: 50px;
 }
-.one-cat-head button{
-    margin-left:70%;
-    padding:9px 30px;
-    margin-top:5px;
-    background-color: rgb(76, 76, 254);
-    color:white;
-    font-size: 15px;
-    border:none;
-    cursor:pointer;
-    border-radius: 10px;;
 
+.one-cat-head button {
+  margin-left: 70%;
+  padding: 9px 30px;
+  margin-top: 5px;
+  background-color: rgb(76, 76, 254);
+  color: white;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
 }
-.img img{
-    height:200px;
-    width:220px;
-    margin-left:50px;
-    margin-top:30px;
-    box-shadow: 0px 0px 4px 1px rgb(208, 208, 208);
-    border-radius: 1px;
-    cursor:pointer;
-    overflow: hidden;
+
+.img img {
+  height: 200px;
+  width: 220px;
+  margin-left: 50px;
+  margin-top: 30px;
+  box-shadow: 0px 0px 4px 1px rgb(208, 208, 208);
+  border-radius: 1px;
+  cursor: pointer;
+  overflow: hidden;
 }
-.img img:hover{
-    box-shadow: 0px 0px 4px 3px rgb(208, 208, 208);
-    transform:scale(1.1);
-    transition:.3s ease-in;
+
+.img img:hover {
+  box-shadow: 0px 0px 4px 3px rgb(208, 208, 208);
+  transform: scale(1.1);
+  transition: 0.3s ease-in;
 }
 
 .product-list-container {
-    margin-top: 70px;
-  }
-  
-  .product-list-container > div {
-    margin-bottom: 10px;
-  }
-  
-  .product-list-container input[type="text"],
-  .product-list-container select {
-    margin-right: 10px;
-  }
-  
-  .product-list-container button {
-    margin-left: 10px;
-  }
-  
-  .product-list-container ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .product-list-container li {
-    margin-bottom: 20px;
-  }
-  
-  .product-list-container li img {
-    max-width: 200px;
-  }
-  
+  margin-top: 70px;
+}
+
+.product-list-container > div {
+  margin-bottom: 10px;
+}
+
+.product-list-container input[type="text"],
+.product-list-container select {
+  margin-right: 10px;
+}
+
+.product-list-container button {
+  margin-left: 10px;
+}
+
+.product-list-container ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.product-list-container li {
+  width: calc(100% / 3);
+  padding: 20px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+.product-list-container li:nth-child(3n+1) {
+  clear: left;
+}
+
+.product-list-container li strong {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.product-list-container li p {
+  margin-bottom: 10px;
+}
+
+.product-list-container li img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+  max-width: 200px;
+}
+
+.product-list-container li button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.product-list-container p {
+  margin-bottom: 0;
+}
