--- a/src/Components/pages/styles/products.css
+++ b/src/Components/pages/styles/products.css
@@ -57,28 +57,64 @@
 }
 
 .product-list-container {
-  margin-top: 70px;
+  margin-top: 80px;
+  background-color: white;
 }
 
 .product-list-container > div {
   margin-bottom: 10px;
 }
 
-.product-list-container input[type="text"],
-.product-list-container select {
-  margin-right: 10px;
+.product-list-container input[type="text"]
+ {
+margin-left:65px;
+  margin-top:60px;
+  padding:7px 100px;
+  border:1px solid rgb(126, 126, 126)
+  
 }
 
-.product-list-container button {
-  margin-left: 10px;
-}
+.search-icon{
+  height:5vh;
+  margin-left:110px;
+  position:absolute;
+  margin-top:67px;
 
+}
+.search-function button{
+  margin-left: 0px;
+  background-color: rgb(1, 1, 102);
+  padding:7px 10px;
+  color:white;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all 0.2s ease;
+}
+.select-category select{
+  margin-left:700px;
+  margin-top:20px;
+  padding:7px 80px;
+  border:1px solid rgb(126, 126, 126)
+}
+.select-category button{
+  background-color: rgb(1, 1, 102);
+  padding:6px 10px;
+  color:white;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-left:10px;
+  transition: all 0.2s ease;
+}
+.search-function button:hover , .select-category button:hover{
+  background-color: rgb(0, 0, 252);
+}
 .product-list-container ul {
   list-style: none;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
+  margin-left: 10px;
 }
 
 .product-list-container li {
@@ -86,6 +122,14 @@
   padding: 20px;
   box-sizing: border-box;
   margin-bottom: 20px;
+  height: 500px;
+  margin-right: 40px;;
+  width:280px;
+  border:1px solid rgb(201, 201, 201);
+  transition: all 0.2s ease;
+}
+.product-list-container li:hover{
+  box-shadow: 0px 0px 10px 0px rgb(183, 183, 183);;
 }
 
 .product-list-container li:nth-child(3n+1) {
@@ -94,30 +138,70 @@
 
 .product-list-container li strong {
   display: block;
-  font-weight: bold;
+  font-weight: 600;
+  font-size: 18 px;
+  margin-top:10px;
   margin-bottom: 10px;
 }
 
 .product-list-container li p {
   margin-bottom: 10px;
+  font-size: 15px;
 }
 
 .product-list-container li img {
   width: 100%;
-  height: auto;
+  height: 160px;
   margin-bottom: 10px;
   max-width: 200px;
+  object-fit: fill;
 }
 
 .product-list-container li button {
-  background-color: #007bff;
+  background-color: #002d5e;
   color: #fff;
   border: none;
-  padding: 10px 20px;
+  padding: 10px 63px;
   cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 15px;
+  transition: all 0.2s ease;
+  margin-bottom: 50px;
+  position: static;
+}
+.cart-btn{
+  margin-bottom: 10px;
+}
+.product-list-container li button:hover{
+  background-color: rgb(5, 5, 139);
 }
 
 .product-list-container p {
   margin-bottom: 0;
 }
-
+.product-list-container h1{
+  color: black;
+  text-align: left;
+  font-size: 30px;
+  font-weight: 600;
+  padding: 10px 20px;
+  font-family: sans-serif;
+  letter-spacing: 0px;
+}
+.all-filter-products{
+  margin-left: 3%;
+  margin-right:3%;
+}
+.no-products-found{
+  margin-left: 20px;;
+}
+.free-delivery-txt{
+  color: green;
+  font-weight: 600;
+}
+.item-price{
+  margin-bottom :0px;
+  font-weight: 600;
+  color:rgb(4, 4, 80);
+}
