--- a/src/Components/pages/styles/cart.css
+++ b/src/Components/pages/styles/cart.css
@@ -172,3 +172,24 @@ color:white
   transform: scale(1);
   margin-top:-30%;
 }
+
+.centered-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.centered-container button{
+  display: flex;
+  justify-content: center;
+  margin-top: 150%;
+  margin-left: -200%;
+  height: 5vh;
+  border-radius: 5px;
+  background-color: rgb(2, 115, 11);
+  border:none;
+  color:white;
+  box-shadow: 0px 0px 10px 0px rgb(180, 174, 174);
+  transition: 0.3s ease;
+}
