--- a/src/Components/pages/styles/profile.css
+++ b/src/Components/pages/styles/profile.css
@@ -7,16 +7,16 @@ body{
   margin-right:200px;
   margin-top:120px;
 }
-.container{
+/* .container{
   background-color: rgba(230, 230, 230, 0.162);
   box-shadow:0px 0px 10px 0px rgba(229, 228, 228, 0.74);
   height:400px;
-}
+} */
 .profile-heading h1{
-  margin-left:120px;;
+  margin-left:-90px;;
   padding: 10px;
   font-size: 40px;;
-  margin-top: -60px;
+  margin-top: -10px;
   color:rgb(0, 0, 0);
   position: absolute;
   font-size: 30px;;
@@ -50,12 +50,13 @@ body{
   .profile-details{
     margin-left: -90px;
     position:absolute;
-    margin-top: 100px;
+    margin-top: 50px;
     background-color: rgb(255, 255, 255);
-    height:200px;
+    height:300px;
     width:900px;
     padding:10px 10px;
     box-shadow: 0px 0px 5px 0px rgb(222, 222, 222);
+    border-radius: 10px;
   }
   .profile-details h6{
      font-size: 30px;;
@@ -69,20 +70,17 @@ body{
   }
 
   
-  .dashboard button
+  .dashboard .update-profile-btn
   {
     position: absolute;
-    margin-left:600px;
-    margin-top: -90px;;
+    margin-left:300px;
+    margin-top: 20px;;
     padding: 7px 40px;
     border:none;
     box-shadow: 1px 0px 5px 0px rgb(127, 126, 126);
     background-color: rgb(67, 19, 74);
     color:white;
     border-radius: 10px;
-    
-    
-    
   }
    .profile-bac img{
     height:4vh;
@@ -105,7 +103,7 @@ body{
   background-color: transparent;
   border-radius: 50px;
   margin-left: 100px;
-  margin-top:320px;
+  margin-top:350px;
   transition:ease 0.1s;
 }
 .profile-bac:hover{
@@ -114,4 +112,61 @@ body{
   border-radius: 50px;
 
 }
+.edit-fname{
+margin-left: 300px;
+margin-right: 10px;
+border-radius: 5px;
+padding: 5px;;
+border:1px solid rgb(151, 151, 151);
+}
+.edit-para{
+  margin-left: 300px;
+  font-weight: bold;
+}
+.edit-lname{
+ border-radius:5px;
+ padding:5px;
+ border: 1px solid rgb(151, 151, 151);
+  }
+.not-editable-email{
+  border:1px solid rgb(151, 151, 151);
+  padding: 5px;
+  border-radius: 5px;
+  margin-left: -300px;
+  visibility: hidden;
+}
+  .edit-mobile{
+    margin-left: 300px;
+    border-radius: 5px;
+    padding: 5px;;
+    border:1px solid rgb(151, 151, 151);
+    }
+    .save-btn{
+      margin-left:300px;
+      margin-top: 20px;
+      padding:7px;
+      text-align: center;
+      border-radius: 5px;
+      width:100px;
+      background-color: green;
+      color:white;
+      text-transform: uppercase;
+      font-weight: bold;
+      border: none;
+    }
+    .cancel button{
+      margin-left:420px;
+      margin-top: -37px;
+      position: absolute;
+      padding:7px;
+      text-align: center;
+      border-radius: 5px;
+      width:100px;
+      background-color: rgb(125, 0, 0);
+      color:white;
+      text-transform: uppercase;
+      font-weight: bold;
+      border: none;
+    }
+
 
