--- a/src/Components/pages/styles/admin-events.css
+++ b/src/Components/pages/styles/admin-events.css
@@ -1,100 +1,91 @@
 .add-products-form {
     width: 80%;
-    height: 300px;
+    max-height: 300px;
     background-color: white;
     margin-top: 100px;
     margin-left: 10%;
     border-radius: 10px;
-    ;
-
-}
-
-.add-products-form h1 {
+    padding: 20px;
+    box-shadow: 0px 0px 10px 0px rgb(137, 137, 137);
+  }
+  
+  .add-products-form h1 {
     color: black;
-    text-align: left;
     font-size: 35px;
     font-weight: 600;
-    padding: 10px 20px;
+    padding: 10px 0;
     font-family: sans-serif;
     letter-spacing: 0px;
-    ;
-
-}
-
-.add-products-form input {
-    margin-left: 30px;
+    margin-bottom: 20px;
+  }
+  
+  .add-products-form input {
+    margin-bottom: 15px;
     border-radius: 5px;
     padding: 8px 10px;
     background-color: rgba(239, 239, 239, 0.145);
     border: 1px solid rgb(115, 115, 115);
-}
-
-.add-products-form select {
-    margin-left: 30px;
+  }
+  
+  .add-products-form select {
+    margin-bottom: 15px;
     border-radius: 5px;
     padding: 8px 10px;
     background-color: rgba(239, 239, 239, 0.083);
     border: 1px solid rgb(115, 115, 115);
-    margin-top: 20px;
     width: 205px;
-}
-
-.add-products-form button {
-    margin-left: 35px;
-    padding: 10px 10px;
+  }
+  
+  .add-products-form .del {
+    padding: 10px 20px;
     border-radius: 5px;
     border: 1px solid rgb(112, 112, 112);
     background-color: rgb(1, 1, 122);
     color: white;
     text-transform: uppercase;
     font-weight: 600;
-    margin-top: 20px;
     box-shadow: 0px 0px 10px 0px rgb(137, 137, 137);
-}
-
-.add-category-form {
+  }
+  
+  .add-category-form {
     width: 50%;
     height: 200px;
     background-color: white;
     margin-top: 100px;
     margin-left: 20%;
     border-radius: 10px;
-    ;
-}
-
-.add-category-form h1 {
+  }
+  
+  .add-category-form h1 {
     color: black;
-    text-align: left;
     font-size: 35px;
     font-weight: 600;
     padding: 10px 20px;
     font-family: sans-serif;
     letter-spacing: 0px;
-    ;
-}
-
-.add-category-form input {
-    margin-left: 30px;
+    margin-bottom: 20px;
+  }
+  
+  .add-category-form input {
+    margin-bottom: 15px;
     border-radius: 5px;
     padding: 8px 10px;
     background-color: rgba(239, 239, 239, 0.145);
     border: 1px solid rgb(115, 115, 115);
-}
-
-.add-category-form button {
-    margin-left: 35px;
-    padding: 10px 10px;
+  }
+  
+  .add-category-form button {
+    padding: 10px 20px;
     border-radius: 5px;
     border: 1px solid rgb(112, 112, 112);
     background-color: rgb(1, 1, 122);
     color: white;
     text-transform: uppercase;
     font-weight: 600;
-    margin-top: 20px;
     box-shadow: 0px 0px 10px 0px rgb(137, 137, 137);
-}
-
-.view-category-form {
+  }
+  
+  .view-category-form {
     width: 90%;
     height: 70%;
     background-color: white;
@@ -102,47 +93,48 @@
     margin-top: 10px;
     border-radius: 10px;
     padding: 10px 50px;
-}
-
-.view-category-form h1 {
+  }
+  
+  .view-category-form h1 {
     color: black;
-    text-align: left;
     font-size: 35px;
     font-weight: 600;
     padding: 10px 20px;
     font-family: sans-serif;
     letter-spacing: 0px;
-    ;
-}
-
-.categories-table {
+    margin-bottom: 20px;
+  }
+  
+  .categories-table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
-}
-
-.categories-table td,
-.categories-table th {
+  }
+  
+  .categories-table td,
+  .categories-table th {
     border: 2px solid #ddd;
     padding: 8px;
-}
-
-.categories-table tr:nth-child(even) {
+  }
+  
+  .categories-table tr:nth-child(even) {
     background-color: #f2f2f2;
-}
-
-.categories-table tr:hover {
+  }
+  
+  .categories-table tr:hover {
     background-color: #ddd;
-}
-
-.categories-table th {
+  }
+  
+  .categories-table th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: #04AA6D;
-    color: white
-}
-.category{
+    color: white;
+  }
+  
+  .category {
     font-weight: 600;
-    color:#04AA6D
-}
+    color: #04AA6D;
+  }
+  
