--- a/src/Components/pages/styles/Dashboard.css
+++ b/src/Components/pages/styles/Dashboard.css
@@ -170,15 +170,14 @@ nav ul li:nth-child(4).active-root ~ .slide{
 }
 .button{
     position: absolute;
-    margin-left:80%;
+    margin-left:77%;
 
 
 }
 
-
 nav button{
    
-    margin-right: 20px;
+    margin-right: 0px;
     padding:7px 16px;
     margin-top:5px;
     background-color:transparent;
@@ -198,7 +197,6 @@ nav button:hover{
     padding:7px 16px;
    
 }
-
 
 nav button:active{
     transform:translate(0.1em,0.1em);
@@ -764,9 +762,13 @@ height:30vh;
     font-weight: 600;
 }
 .main button{
-    color: rgb(0, 77, 17);
+    color: rgb(255, 255, 255);
     border: 2px solid green;
-    background-color: #ffff00;
+    border-bottom-left-radius: 30%;
+    border-top-right-radius: 30%;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;;
+    background-color: green;
     text-transform:uppercase;
     padding:10px 15px;
     font-size: 17px;
@@ -774,12 +776,13 @@ height:30vh;
     cursor: pointer;
     margin-top:20px;
     font-weight: 600;
+    transition: 0.5s ease;
 
 }
 .main button:is(:hover, :focus){
-    color:yellow;
-    background-color:green;
-    border: 1px solid yellow;
+    color:rgb(0, 53, 11);
+    background-color:rgb(255, 255, 255);
+    border: none;
 }
 .heading{
     color:rgb(0, 0, 0);
@@ -914,6 +917,9 @@ border-radius:60%;
 position: absolute;
 margin-top:11px;
 margin-left: -13px;
+  }
+  .Account-menu{
+    margin-left:50px;
   }
   .prohhh{
     display:flex;
