--- a/src/Components/pages/styles/admin-events.css
+++ b/src/Components/pages/styles/admin-events.css
@@ -1,7 +1,7 @@
 .add-products-form {
     width: 80%;
     height: 300px;
-    background-color: white;
+    background-color: rgba(245, 245, 245, 0.45);
     margin-top: 100px;
     margin-left: 10%;
     border-radius: 10px;
@@ -55,7 +55,7 @@
 .add-category-form {
     width: 50%;
     height: 200px;
-    background-color: white;
+    background-color: rgba(245, 245, 245, 0.45);
     margin-top: 100px;
     margin-left: 20%;
     border-radius: 10px;
@@ -97,7 +97,7 @@
   .view-category-form {
     width: 90%;
     height: 70%;
-    background-color: white;
+    background-color: rgba(245, 245, 245, 0.45);
     margin-left: 5%;
     margin-top: 10px;
     border-radius: 10px;
