--- a/src/Components/pages/styles/profile.css
+++ b/src/Components/pages/styles/profile.css
@@ -1,86 +1,83 @@
-
-body{
-  background-color: #eaeaeaa1;
+.profile{
+  background-color: #ffffff;
 }
-.profile-container{
+/* .profile-container{
   margin-left:200px;
   margin-right:200px;
   margin-top:120px;
-}
-/* .container{
-  background-color: rgba(230, 230, 230, 0.162);
-  box-shadow:0px 0px 10px 0px rgba(229, 228, 228, 0.74);
-  height:400px;
 } */
+.profile-container{
+height:400px;
+border:1px solid rgb(218, 218, 218);
+margin-top: 120px;
+width:600px;
+margin-left:30%;
+}
 .profile-heading h1{
-  margin-left:-90px;;
-  padding: 10px;
-  font-size: 40px;;
-  margin-top: -10px;
-  color:rgb(0, 0, 0);
-  position: absolute;
-  font-size: 30px;;
-  padding: 10px;;
+background-color: rgba(213, 213, 255, 0.489);
+color:blue;
+font-size: 30px;;
 }
 
   .profile-img {
     font-size: 48px;
-    width: 150px;
-    height: 150px;
-    background-color: #baa1d8;
-    border-radius: 50%;
+    width: 130px;
+    height: 130px;
+    background-color: #664a37;
     display: block;
+    border-radius: none;
     justify-content: center;
     align-items: center;
     margin-bottom: 16px;
     box-shadow: 0px 0px 5px 0px #0000009c;
-    margin-top:125px;
-    margin-left: 0px;
+    margin-top:-280px;
+    margin-left: 24%;
     position: absolute;  }
   
+    .ppp-img img{
+      margin-top:-550px;
+      margin-left: 30px;;
+      height:25vh
+    }
   .profile-img span {
-    color: #000000;
+    color: #ffffff;
     font-weight: 600;
     font-size: 70px;
-    margin-top:20px;
-    margin-left: 55px;
+    margin-top:8px;
+    margin-left: 35px;
     position: absolute;
 
   }
   .profile-details{
-    margin-left: -90px;
-    position:absolute;
-    margin-top: 50px;
-    background-color: rgb(255, 255, 255);
-    height:300px;
-    width:900px;
-    padding:10px 10px;
-    box-shadow: 0px 0px 5px 0px rgb(222, 222, 222);
-    border-radius: 10px;
+    margin-top:0px;
+    height:350px;
+  justify-content: center;
+  margin-left:40%;
+    width:290px;
+    
   }
-  .profile-details h6{
-     font-size: 30px;;
-     margin-top: 10px;;
-     margin-left: 300px;;
-     color:rgb(0, 0, 0);
+  .profile-details table tr{
+    border-bottom: 1px solid rgb(205, 205, 205);
+    border-spacing: 10px;
+    color:rgb(140, 140, 140);
+width:400px;
   }
-  .profile-details span{
-    margin-left: 300px;
-    color:rgb(0, 0, 0);
+  .profile-details table td{
+    padding:5px;
   }
 
   
-  .dashboard .update-profile-btn
+.update-profile-btn
   {
-    position: absolute;
-    margin-left:300px;
-    margin-top: 20px;;
-    padding: 7px 40px;
-    border:none;
-    box-shadow: 1px 0px 5px 0px rgb(127, 126, 126);
-    background-color: rgb(67, 19, 74);
-    color:white;
-    border-radius: 10px;
+margin-left:-190px;
+margin-top:-80px;
+position: absolute;
+background-color: rgb(20, 203, 223);
+border:none;
+padding:10px;
+color:white;
+font-weight: bold;
+text-transform: uppercase;
   }
    .profile-bac img{
     height:4vh;
@@ -113,10 +110,11 @@ body{
 
 }
 .edit-fname{
-margin-left: 300px;
+margin-left: 0px;
 margin-right: 10px;
 border-radius: 5px;
-padding: 5px;;
+padding: 5px;
+width:130px;
 border:1px solid rgb(151, 151, 151);
 }
 .edit-para{
@@ -124,6 +122,10 @@ border:1px solid rgb(151, 151, 151);
   font-weight: bold;
 }
 .edit-lname{
+  position: absolute;
+  margin-top: -40px;
+  margin-left:150px;
+  width:130px;
  border-radius:5px;
  padding:5px;
  border: 1px solid rgb(151, 151, 151);
@@ -136,13 +138,13 @@ border:1px solid rgb(151, 151, 151);
   visibility: hidden;
 }
   .edit-mobile{
-    margin-left: 300px;
+    margin-left:0px;
     border-radius: 5px;
     padding: 5px;;
     border:1px solid rgb(151, 151, 151);
     }
     .save-btn{
-      margin-left:300px;
+      margin-left:0px;
       margin-top: 20px;
       padding:7px;
       text-align: center;
@@ -155,7 +157,7 @@ border:1px solid rgb(151, 151, 151);
       border: none;
     }
     .cancel button{
-      margin-left:420px;
+      margin-left:120px;
       margin-top: -37px;
       position: absolute;
       padding:7px;
