--- a/src/Components/pages/styles/cart.css
+++ b/src/Components/pages/styles/cart.css
@@ -61,6 +61,9 @@
 .product-details .span{
   width:100px;
 }
+.product-details .duration{
+  margin-top: 5%;  
+}
 .remove-button p
 {
   margin-top: 10px;
