--- a/src/Components/pages/styles/profile.css
+++ b/src/Components/pages/styles/profile.css
@@ -1,174 +1,158 @@
-.profile{
+.profile {
   background-color: #ffffff;
 }
+
 /* .profile-container{
   margin-left:200px;
   margin-right:200px;
   margin-top:120px;
 } */
-.profile-container{
-height:400px;
-border:1px solid rgb(218, 218, 218);
-margin-top: 120px;
-width:600px;
-margin-left:30%;
-}
-.profile-heading h1{
-background-color: rgba(213, 213, 255, 0.489);
-color:blue;
-font-size: 30px;;
+.profile-container {
+  height: 400px;
+  border: 1px solid rgb(218, 218, 218);
+  margin-top: 120px;
+  width: 600px;
+  margin-left: 30%;
 }
 
-  .profile-img {
-    font-size: 48px;
-    width: 130px;
-    height: 130px;
-    background-color: #664a37;
-    display: block;
-    border-radius: none;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 16px;
-    box-shadow: 0px 0px 5px 0px #0000009c;
-    margin-top:-280px;
-    margin-left: 24%;
-    position: absolute;  }
-  
-    .ppp-img img{
-      margin-top:-550px;
-      margin-left: 30px;;
-      height:25vh
-    }
-  .profile-img span {
-    color: #ffffff;
-    font-weight: 600;
-    font-size: 70px;
-    margin-top:8px;
-    margin-left: 35px;
-    position: absolute;
+.profile-heading h1 {
+  background-color: rgba(213, 213, 255, 0.489);
+  color: rgb(0, 126, 126);
+  font-size: 30px;
+  ;
+}
 
-  }
-  .profile-details{
-    margin-top:0px;
-    height:350px;
-  justify-content: center;
-  margin-left:40%;
-    width:290px;
-    
-  }
-  .profile-details table tr{
-    border-bottom: 1px solid rgb(205, 205, 205);
-    border-spacing: 10px;
-    color:rgb(140, 140, 140);
-width:400px;
-  }
-  .profile-details table td{
-    padding:5px;
-  }
-
-  
-.update-profile-btn
-  {
-margin-left:-190px;
-margin-top:-80px;
-position: absolute;
-background-color: rgb(20, 203, 223);
-border:none;
-padding:10px;
-color:white;
-font-weight: bold;
-text-transform: uppercase;
-  }
-   .profile-bac img{
-    height:4vh;
-    transform: rotate(180deg);
-    margin-top: 10px;
-    margin-left:10px;
-  }
-  big{
-    display: flex;
-    margin-left: 35px;;
-    margin-top: -30px;;
-    flex-direction: row;
-    color:black;
-    text-decoration:none;
-  } 
-.profile-bac{
+.ppp-img .initial-letter {
   position: absolute;
-  width:100px;
-  height: 50px;
-  background-color: transparent;
-  border-radius: 50px;
-  margin-left: 100px;
-  margin-top:350px;
-  transition:ease 0.1s;
+  margin-top: -330px;
+  margin-left: 60px;
+  padding: 20px 45px;
+  border-radius: 50%;
+  background-color: rgba(214, 214, 214, 0.717);
+  font-size: 60px;
+  color: rgb(0, 148, 148);
+  border: 0.5px solid rgba(0, 148, 148, 0.258);
 }
-.profile-bac:hover{
-  
-  background-color: rgba(209, 209, 209, 0.379);
-  border-radius: 50px;
+
+.profile-details {
+  margin-top: 0px;
+  height: 350px;
+  justify-content: center;
+  margin-left: 40%;
+  width: 290px;
 
 }
-.edit-fname{
-margin-left: 0px;
-margin-right: 10px;
-border-radius: 5px;
-padding: 5px;
-width:130px;
-border:1px solid rgb(151, 151, 151);
+
+.profile-details table tr {
+  border-bottom: 1px solid rgb(205, 205, 205);
+  border-spacing: 10px;
+  color: rgb(140, 140, 140);
+  width: 400px;
 }
-.edit-para{
+
+.profile-details table td {
+  padding: 5px;
+}
+
+
+.update-profile-btn {
+  margin-left: -190px;
+  margin-top: -80px;
+  position: absolute;
+  background-color: rgb(0, 148, 148);
+  border: none;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: 0.5s ease;
+}
+
+.update-profile-btn:hover {
+  background-color: rgb(0, 122, 101);
+  border-radius: 10px;
+}
+
+.profile-bac {
+  position: absolute;
+  padding: 10px 25px;
+  background-color: transparent;
+  margin-left: -150px;
+  margin-top: -230px;
+  transition: ease 0.1s;
+}
+
+.profile-bac:hover {
+
+  background-color: rgba(209, 209, 209, 0.379);
+
+}
+
+.edit-fname {
+  margin-left: 0px;
+  margin-right: 10px;
+  border-radius: 5px;
+  padding: 5px;
+  width: 130px;
+  border: 1px solid rgb(151, 151, 151);
+}
+
+.edit-para {
   margin-left: 300px;
   font-weight: bold;
 }
-.edit-lname{
+
+.edit-lname {
   position: absolute;
   margin-top: -40px;
-  margin-left:150px;
-  width:130px;
- border-radius:5px;
- padding:5px;
- border: 1px solid rgb(151, 151, 151);
-  }
-.not-editable-email{
-  border:1px solid rgb(151, 151, 151);
+  margin-left: 150px;
+  width: 130px;
+  border-radius: 5px;
+  padding: 5px;
+  border: 1px solid rgb(151, 151, 151);
+}
+
+.not-editable-email {
+  border: 1px solid rgb(151, 151, 151);
   padding: 5px;
   border-radius: 5px;
   margin-left: -300px;
   visibility: hidden;
 }
-  .edit-mobile{
-    margin-left:0px;
-    border-radius: 5px;
-    padding: 5px;;
-    border:1px solid rgb(151, 151, 151);
-    }
-    .save-btn{
-      margin-left:0px;
-      margin-top: 20px;
-      padding:7px;
-      text-align: center;
-      border-radius: 5px;
-      width:100px;
-      background-color: green;
-      color:white;
-      text-transform: uppercase;
-      font-weight: bold;
-      border: none;
-    }
-    .cancel button{
-      margin-left:120px;
-      margin-top: -37px;
-      position: absolute;
-      padding:7px;
-      text-align: center;
-      border-radius: 5px;
-      width:100px;
-      background-color: rgb(125, 0, 0);
-      color:white;
-      text-transform: uppercase;
-      font-weight: bold;
-      border: none;
-    }
 
+.edit-mobile {
+  margin-left: 0px;
+  border-radius: 5px;
+  padding: 5px;
+  ;
+  border: 1px solid rgb(151, 151, 151);
+}
 
+.save-btn {
+  margin-left: 0px;
+  margin-top: 20px;
+  padding: 7px;
+  text-align: center;
+  border-radius: 5px;
+  width: 100px;
+  background-color: green;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  border: none;
+}
+
+.cancel button {
+  margin-left: 120px;
+  margin-top: -37px;
+  position: absolute;
+  padding: 7px;
+  text-align: center;
+  border-radius: 5px;
+  width: 100px;
+  background-color: rgb(125, 0, 0);
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  border: none;
+}
